# This is a list of changes in pygame's history.
#
# CVS tag names are placed before the date
# BREAK = change breaks existing code
# BUG	= fixed a bug that was (or could have been) crashing

April 14, 2002
	bug when re-initializing pygame.display [BUG]

April 8, 2002
        rectstyle now includes any object with a "rect" attrib
	rects now have collidedict() and collidedictall()

March 27, 2002
	fixes for windows music.get_pos() and windows config

March 23, 2002
	big config.py update
	music.get_pos()  (thx Michael Urman)

March 20, 2002
	sprite.spritecollideany() now works as described

March 4, 2002
        sprite.RenderClear can accept a function as bgd

February 19, 2002
	event.peek() returns next event [BREAK?]
	Event objects have 'truth' operator

February 13, 2002
        all draw primitives have a default width

February 11, 2002
        Rect unionall() and unionall_ip() fixed

February 10, 2002
        pygame.init() not required for proper cleanup [BUG]
        CD.play() fixed for tracks above 0

February 8, 2002
	Rect and Surface subclassable types

February 1, 2002
	locking problem with 90 degree rotate [BUG]
	set_icon overrides default icon

January 31, 2002
	removed emberrasing debug printing
	draw.rect does inside edge for bottomright

pygame-14
January 29, 2002
	everything bumped for the 1.4 release

January 28, 2002
	update SDL_rotozoom to 2.0.3

January 26, 2002
	special cases for 90 degree transform.rotate()
	OSX cleanups for commandline (thanks Bob)
	added sprite.spritecollideany()

January 23, 2002
	transform.rotate() does alpha if image has alphaplane
	transform.rotate() no longer "off by one" in the x axis
	added CD.get_all() to get information for all tracks
	CD.play() can now take an option start and end time

January 17, 2002
        smarter importing code
        default pygame icon for window

January 16, 2002
	started implementing basic unit tests
	several bug cleanups with Rects (thx unit tests)

January 14, 2002